k8s/gateway-deployment.yaml
# Gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  namespace: microservices-prod
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: asia-south1-docker.pkg.dev/pure-girder-452812-r3/microservices/gateway:latest
          ports:
            - containerPort: 5000
