k8s/orders-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-deployment
  namespace: microservices-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: asia-south1-docker.pkg.dev/pure-girder-452812-r3/microservices/orders:latest
          ports:
            - containerPort: 5000
