k8s/users-deployment.yaml
# users-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deployment
  namespace: microservices-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users
          image: asia-south1-docker.pkg.dev/pure-girder-452812-r3/microservices/users:latest
          ports:
            - containerPort: 5000
