k8s/gateway-service.yaml
# users-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: microservices-prod
spec:
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
